# CodeDoc

./: LICENSE  README.md  pyproject.toml  set_up.bat  test.py
src/: math_utils.py  utils.py
src/codedoc/: agent.py  analysis.py  cli.py  config.py  patch.py  quality.py  scoring.py  server.py  tools.py
